# social_marketplace

./: LICENSE  README.md
social_marketplace_agent_examples/: CMakeLists.txt  package.xml
social_marketplace_agent_examples/config/: agent_1_initial_parameters.csv  agent_2_initial_parameters.csv  agent_3_initial_parameters.csv
social_marketplace_agent_examples/src/: agent_1.cpp
social_marketplace_bidding_platform/: CMakeLists.txt  package.xml
social_marketplace_bidding_platform/src/: bidding_platform.cpp
social_marketplace_bringup/: CMakeLists.txt  package.xml
social_marketplace_bringup/launch/: social.launch.xml
social_marketplace_common/: CMakeLists.txt  package.xml
social_marketplace_common/include/social_marketplace_common/: table_functions.hpp
social_marketplace_common/src/: table_functions.cpp
social_marketplace_feedback_server/: CMakeLists.txt  package.xml
social_marketplace_feedback_server/config/: agent_1_target_parameters.csv  agent_2_target_parameters.csv  agent_3_target_parameters.csv
social_marketplace_feedback_server/src/: feedback_server.cpp
social_marketplace_interfaces/: CMakeLists.txt  package.xml
social_marketplace_interfaces/action/: AgentInteraction.action  FeedbackCollection.action
social_marketplace_interfaces/msg/: AgentParameters.msg  SceneParameters.msg
social_marketplace_interfaces/srv/: AgentRegistration.srv  SimpleAgentInteraction.srv  SimpleFeedbackCollection.srv  TriggerSceneAnalysis.srv
social_marketplace_scene_analysis/: CMakeLists.txt  package.xml
social_marketplace_scene_analysis/config/: scene_data.csv
social_marketplace_scene_analysis/include/social_marketplace/: parameter_adjustment_client.hpp
social_marketplace_scene_analysis/src/: mock_scene_publisher.cpp
